<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Switch
        android:id="@+id/powerSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/power_on_off" />

    <Switch
        android:id="@+id/sensorSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_mode" />

    <SeekBar
        android:id="@+id/brightnessSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/presetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_preset" />

    <Button
        android:id="@+id/motionLogsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_logs" />
</LinearLayout>
